--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <!-- <h1 class="title is-1 publication-title"><b><font size="+5">Introspective Planning</font></b>: </br> Aligning Robots' Uncertainty with Inherent Task Ambiguity </br></h1> -->
           <h1 class="title is-1 publication-title">
             <b>Introspective Planning:</b>
             <br>
@@ -93,7 +92,7 @@
               </span>
               <!-- Video Link. -->
               <!-- <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -176,12 +175,9 @@
         After generating multiple options, we query the LLM for the explanation by introspective planning and then ask the model to predict the most correct option.
          Based on the likelihood scores of true intents from a calibration dataset, conformal prediction finds the quantile value (0.85), and includes any options scoring above 0.15 in the prediction set for each test scenario. 
          This method guarantees the correct answer is included among the options, at a confidence level specified by the user.
-
-         <!-- <img src="./static/images/safe_mobile.png" alt="Descriptive Alt Text" style="max-width: 100%; height: auto;"> -->
       </div>
     </div>
 </section>
-
 
 <!-- Paper video. -->
 <!-- <div class="columns is-centered">
