--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay muted loop playsinline controls height="100%">
-        <source src="./static/videos/introplan.mp4"
+        <source src="./static/videos/introplan2.mov"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
