--- a/index.html
+++ b/index.html
@@ -221,12 +221,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{liang2024introspective,
-        title={Introspective Planning: Guiding Language-Enabled Agents to Refine Their Own Uncertainty},
-        author={Liang, Kaiqu and Zhang, Zixu and Fisac, Jaime Fern{\'a}ndez},
-        journal={arXiv preprint arXiv:2402.06529},
-        year={2024}
-}</code></pre>
+    <pre><code>@inproceedings{liangintrospective,
+      title={Introspective Planning: Aligning Robots' Uncertainty with Inherent Task Ambiguity},
+      author={Liang, Kaiqu and Zhang, Zixu and Fisac, Jaime Fern{\'a}ndez},
+      booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems}
+    }</code></pre>
   </div>
 </section>
 
