--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/kevinliang888/IntroPlan/tree/main/data"
+                <a href="https://huggingface.co/datasets/kaiquliang/Safe-Mobile-Manipulation"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
